# csa-lab4

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  tests.yml
crates/emulator/: Cargo.toml
crates/emulator/src/: alu.rs  lib.rs  memory.rs
crates/emulator/src/cpu/: mod.rs  tests.rs
crates/emulator/src/microcode/: init.rs  mod.rs
crates/forgery/: Cargo.toml
crates/forgery/src/: disasm.rs  main.rs  tester.rs
crates/shared/src/: lib.rs
crates/translator/: Cargo.toml
crates/translator/src/: ast.rs  compiler.rs  ferrite.pest  lib.rs  parser.rs
crates/translator/std/: io.ferrite
tests/: cat.ferrite  cat.toml  double.ferrite  double.toml  hello.ferrite  hello.toml  hello_trace.txt  hello_user.ferrite  hello_user.toml  problem.ferrite  problem.toml  sha256.ferrite  sha256.py  sha256.toml  sort.ferrite  sort.py  sort.toml
