[package]
name = "forgery"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
shared = { path = "../shared" }
emulator = { path = "../emulator" }
translator = { path = "../translator" }
color-eyre = { version = "0.6" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
colored = "3.1.1"
